@@ -184,11 +184,13 @@ public class ParserTool {
 
 	public static Date parseDate(String dateStr) {
 		try {
-			if (dateStr.length() < 10)
+			if( dateStr == null || dateStr.length() < 10 )
 				throw new NumberFormatException("badDateTime"); //$NON-NLS-1$
+			
 			SimpleDateFormat df = new SimpleDateFormat(
 					"yyyy-MM-dd", INTERNAL_PARSE_LOCALE); //$NON-NLS-1$
-			return dateStr != null ? df.parse(dateStr) : null;
+			return df.parse( dateStr );
+			
 		} catch (Exception e) {
 			throw new NumberFormatException(e.toString());
 		}
@@ -299,12 +301,6 @@ public class ParserTool {
 				throw new NumberFormatException("badTimezone"); //$NON-NLS-1$
 			}
 
-			int hours = (source.charAt(pos + 1) - '0') * 10
-					+ source.charAt(pos + 2) - '0';
-			int mins = (source.charAt(pos + 4) - '0') * 10
-					+ source.charAt(pos + 5) - '0';
-			int milliseconds = (hours * 60 + mins) * 60 * 1000;
-
 			// subtract milliseconds from current date to obtain GMT
 			// if (source.charAt(pos)=='+') milliseconds=-milliseconds;
 			// date.setTime(date.getTime()+milliseconds);
@@ -359,7 +355,7 @@ public class ParserTool {
 
 	public static boolean parseBoolean(String value) {
 		if (!isEmpty(value)) {
-			return new Boolean(value).booleanValue();
+			return Boolean.valueOf( value );
 		}
 		return false;
 	}
@@ -395,31 +391,31 @@ public class ParserTool {
 	}
 
 	public static Object convertToObject(double d) {
-		return new Double(d);
+		return Double.valueOf( d );
 	}
 
 	public static Object convertToObject(int d) {
-		return new Integer(d);
+		return Integer.valueOf( d );
 	}
 
 	public static Object convertToObject(char d) {
-		return new Character(d);
+		return Character.valueOf( d );
 	}
 
 	public static Object convertToObject(byte d) {
-		return new Byte(d);
+		return Byte.valueOf( d );
 	}
 
 	public static Object convertToObject(short d) {
-		return new Short(d);
+		return Short.valueOf( d );
 	}
 
 	public static Object convertToObject(long d) {
-		return new Long(d);
+		return Long.valueOf( d );
 	}
 
 	public static Object convertToObject(float d) {
-		return new Float(d);
+		return Float.valueOf( d );
 	}
 
 	public static Object convertToObject(Object d) {
